--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="photo">
                 <!--PROFILE PICTURE-->
                <div class="circle"></div>
-                    <img src="https://scontent.fcrk1-1.fna.fbcdn.net/v/t31.0-0/p370x247/29354708_1731561013597776_7337963662617854784_o.jpg?_nc_cat=110&ccb=2&_nc_sid=19026a&_nc_eui2=AeHpLyzGr-XT8_eMBBCkLlqUmm7Y2gMZKumabtjaAxkq6aJC7aS6UbjYVs1T2c3EVrt-E4kanwPnKZqaSCL0jXU1&_nc_ohc=MiO8dMCfBZoAX8wWP8i&_nc_ht=scontent.fcrk1-1.fna&tp=6&oh=ce43e78e9be98d6a19b3a33e34d83ce7&oe=60152F1B" alt="profile-pic">
+                    <img src="https://lassrenzo.github.io/img/dp.jpg" alt="profile-pic">
                 </div>
                 <!--PERSONAL INFORMATION-->
                 <div class="info">
